...
        }
    }
    Surface(
        onClick = { showPicker = true },
        color = Color.Transparent,
        shape = MaterialTheme.shapes.medium,
        modifier = modifier.testTag("prep_coffee_selector"),
    ) {
        Row(
            Modifier.fillMaxWidth().heightIn(min = 64.dp).padding(vertical = 8.dp),
            horizontalArrangement = Arrangement.spacedBy(12.dp),
            verticalAlignment = Alignment.CenterVertically,
        ) {
...
